# ext_argparse

./: README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-app.yml
ext_argparse/: __init__.py  argproc.py  param_collection.py  param_enum.py  parameter.py
tests/: common.py  config_io_tests.py  config_output_tests.py  dataclass_experiment.py  enum_parameter_tests.py  nested_parameter_tests.py  parameter_tests.py  subroutine_tests.py  test_enum_parameters.py  test_nested_parameters.py  test_subroutines.py
tests/test_data/: default_settings.yaml  default_settings2.yaml  enum_setting_defaults.yaml  enum_setting_defaults3.yaml  enum_setting_defaults_with_comments.yaml  enum_settings.yaml  enum_settings2.yaml  nested_settings.yaml  settings.yaml  small_tests.yaml
