[metadata]
name = ext_argparse
version = 0.1.0rc5
author = Gregory Kramida
author_email = algomorph@gmail.com
description = Extended version of python argparse that allows using code-completion to access parameters and their values (~arguments), configuration (de)serialization, and other neat things.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Algomorph/ext_argparse
project_urls =
    Source = https://github.com/Algomorph/ext_argparse
    Bug Tracker = https://github.com/Algomorph/ext_argparse/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages =
    ext_argparse
python_requires = >=3.8
install_requires =
    ruamel.yaml>=0.17.6